ehiring/templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ehiring-nginx-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30042
  selector:
    app: nginx
