ehiring/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ehiring-ingress
spec:
  rules:
  - http:
    paths:
    - path: /
      backend:
        service:
          name: ehiring-ehiring-host-service
          port:
            number: 8080
    - path: /api/users/*
      backend:
        service:
          name: ehiring-users-backend-service
          port:
            number: 3000
    - path: /api/tenants/*
      backend:
        service:
          name: ehiring-tenants-backend-service
          port:
            number: 3000
